<resources>
    <string name="app_name">风铃</string>
    <string name="reg_appname">风铃注册</string>
    <string name="login">登陆</string>
    <string name="logout">退出</string>
    <string name="password">密 码:</string>
    <string name="username">用户名:</string>
    <string name="pre_music">上一曲</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="next_music">下一曲</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="submit">提交</string>
    <string name="phone_view">手机号</string>
    <string name="password_view">密码</string>
    <string name="login_view">登录</string>
    <string name="registered_view">注册</string>
    <string name="forgot_password_view">忘记密码</string>
    <string name="sex_view">性别</string>
    <string name="emil_view">邮箱</string>
    <string name="ok_password_view">确认密码</string>
    <string name="scan_music_view">扫描音乐</string>
    <string name="search_view">搜索</string>
    <string name="menu_view">菜单</string>
    <string name="online_music_view">在线音乐</string>
    <string name="my_playlist_view">我的歌单</string>
    <string name="change_bg_view">更改主页背景图</string>
    <string name="singer_view">歌手</string>
    <string name="change_theme">更改主题色</string>
    <string name="change_setting">设置</string>
    <string name="song_information">歌曲信息</string>
    <string name="song">歌曲</string>
    <string name="select_language">选择语言</string>
    <string name="select_theme">选择主题</string>
    <string name="language_view">语言</string>
    <string name="theme_view">主题</string>
    <string name="music_test_title_view">龙族</string>
    <string name="jianlan_view">江南</string>
    <string name="lumingfei_view">路明非</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">本地</string>
    <string name="title_dashboard">收藏</string>
    <string name="title_notifications">网络</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="collection">收藏</string>
    <string name="unfavorite">取消收藏</string>
    <string name="return_home_view">返回主页</string>
    <string name="save_setting_view">保存设置</string>
    <string name="no_songs_played">没有播放歌曲</string>
    <string name="exit_login_view">退出登录</string>
</resources>
