<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/background2"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:orientation="vertical"
        android:layout_marginRight="30dp">
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="个人信息"
        android:textSize="35sp"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="60sp"
        android:layout_gravity="center"
        android:textColor="@color/teal_700"
        android:gravity="center"
        />
        <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="25sp"
            />
        <TextView
            android:id="@+id/userName"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:textSize="25sp"
            android:text="test"
            android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
            android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/phone_view"
            android:textSize="25sp"
            />
        <TextView
            android:id="@+id/userNumber"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:textSize="25sp"
            android:text="testNumber"
            android:layout_height="wrap_content"/>
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
            android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/emil_view"
            android:textSize="25sp"
            />
        <TextView
            android:id="@+id/userEmail"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:textSize="25sp"
            android:text="testEmail"
            android:layout_height="wrap_content"/>
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
            android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/sex_view"
            android:textSize="25sp"
            />
        <TextView
            android:id="@+id/userSex"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:textSize="25sp"
            android:text="testSex"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:id="@+id/sign_out"
            android:layout_marginBottom="20sp"
            android:text="@string/exit_login_view"
            android:background="#2196F3"/>
    </LinearLayout>

    </LinearLayout>
</LinearLayout>
